--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# This is the official list of go-otx-api-client authors for copyright purposes.
-# This file is distinct from the CONTRIBUTORS files.
+# go-otx-api-client authors for copyright purposes.
 
-Bill Smartt <bsmartt13@gmail.com>
+Bill Smartt
